design.css
/* CSS for the calculator */
 
html {
  background-image: url(background.png); /*image courtesy of nasa - https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/pia18836-full.jpg?itok=0sFwNc9S*/
  background-size: 100em;
  background-position: left top;
  background-repeat: no-repeat;
  overflow: hidden;
}
 
.wrapper {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
}
 
.row {
  display: flex;
  flex-flow: row wrap;
  align-items: space-between;
}
 
.typevalue {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;
  text-align: left;
  height: 55vh;
  width: 0;
  overflow: visible;
}
 
.numbervalue {
  display: flex;
  flex-flow: column wrap;
  justify-content: space-around;
  height: 55vh;
  margin: 0 0 0 3.5em;
}
 
form, h1 {text-align: center;}
 
h1 {font-size: 5vh; font-family: 'Baloo Bhaina', cursive; line-height: 130%;;}
 
span{font-size: 9vh;} /*this is to make the last word in title bigger*/
 
body {font-family: 'Overlock', cursive;}
 
p {
  font-size: 3vh;
  line-height: 0%;
  text-shadow: -.05em -.05em .05em #000000;
}
 
.bold{font-weight: bolder}
 
div.typevalue>h4 {font-size: 3vh;}
 
div.numbervalue>p {font-size: 5.5vh; text-indent: .7em;}
 
@media all and (max-width: 28em) {
  
  div.typevalue>h4 {font-size: 5.3vw;}
  div.numbervalue>p {font-size: 10vw;}
}
 
input[type="number"] {
  background-color: transparent;
  background: radial-gradient(#96ffc7, transparent, transparent);
  background-size: 150%;
  background-position: center center;
  overflow: visible;
  color: white;
  font-size: 4.5vh;
  text-shadow: -.05em -.05em .05em #000000;
  text-align: center;
  border-color: transparent;
  border-style: none;
}
 
input[type="submit"] {
  margin: 0.8em 0 0 0;
  width: 8vh;
  height: 8vh;
  border-radius: 25em;
  background-color: transparent;
  background: radial-gradient(circle, #000000, #000000, #000000, #000000, #51fffc, transparent, transparent, transparent);
  color: white;
  text-shadow: -.05em -.05em .05em #000000;
  font-family: 'Baloo Bhaina', cursive;
  font-size: 2.7vh;
  text-align: center;
  margin: 2em 2em 0 0;
  border-color: transparent;
  border-style: none;
}
 
input[type="reset"] {
  width: 11vh;
  height: 11vh;
  border-radius: 25em;
  background-color: transparent;
  background: radial-gradient(circle, #000000, #000000, #000000, #000000, #ffff96, transparent, transparent, transparent);
  color: white;
  text-shadow: -.05em -.05em .05em #000000;
  font-family: 'Baloo Bhaina', cursive;
  text-align: center;
  font-size: 2.7vh;
  border-color: transparent;
  border-style: none;
}
 
h1, h4, p {color: white; text-shadow: -.05em -.05em .05em #000000;}
 
 
/*all animations are below this comment */
 
input[type="submit"]:hover {
  animation-name: black-submit;
  animation-duration: .5s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  -webkit-animation-name: black-submit;
  -webkit-animation-duration: .5s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  -moz-animation-name: black-submit;
  -moz-animation-duration: .5s;
  -moz-animation-iteration-count: infinite;
  -moz-animation-timing-function: ease-in-out;
  background: radial-gradient(circle, #000000, #000000, #000000, #000000, #000000, #000000, #000000, #000000, #000000, transparent, transparent);
}
 
input[type="submit"]:active {
  animation-name: bright-submit;
  animation-duration: .1s;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  -webkit-animation-name: bright-submit;
  -webkit-animation-duration: .1s;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: ease-in;
  -moz-animation-name: bright-submit;
  -moz-animation-duration: .1s;
  -moz-animation-iteration-count: 1;
  -moz-animation-timing-function: ease-in;
  background: radial-gradient(circle, #51fffc, #51fffc, transparent, transparent);
}
 
input[type="reset"]:hover {
  animation-name: black-reset;
  animation-duration: .5s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  -webkit-animation-name: black-reset;
  -webkit-animation-duration: .5s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  -moz-animation-name: black-reset;
  -moz-animation-duration: .5s;
  -moz-animation-iteration-count: infinite;
  -moz-animation-timing-function: ease-in-out;
  background: radial-gradient(circle, #000000, #000000, #000000, #000000, #000000, #000000, #000000, #000000, #000000, transparent, transparent);
}
 
input[type="reset"]:active {
  animation-name: bright-reset;
  animation-duration: .1s;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  -webkit-animation-name: bright-reset;
  -webkit-animation-duration: .1s;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: ease-in;
  -moz-animation-name: bright-reset;
  -moz-animation-duration: .1s;
  -moz-animation-iteration-count: 1;
  -moz-animation-timing-function: ease-in;
  background: radial-gradient(circle, #ffff96, #ffff96, transparent, transparent);
}
/* ... */

